Add reranking timings to UI and log.